--- a/SeekAround/app/src/main/res/values/colors.xml
+++ b/SeekAround/app/src/main/res/values/colors.xml
@@ -17,4 +17,13 @@
     <color name="white">#FFFFFF</color>
     <color name="lightBlue">#7CD6F5</color>
 
+    <!--<color name="colorPrimary">#43A2D4</color>-->
+    <!--<color name="colorPrimaryDark">#364F6B</color>-->
+    <!--<color name="colorAccent">#FC5185</color>-->
+    <!--<color name="background">#F6F6F6</color>-->
+    <!--<color name="white">#FFFFFF</color>-->
+    <!--<color name="hintColor">#EAEAEA</color>-->
+    <!--<color name="textColor">#828284</color>-->
+    <!--<color name="hederTextColor">#666666</color>-->
+
 </resources>
