--- a/SeekAround/app/src/main/res/layout/content_main.xml
+++ b/SeekAround/app/src/main/res/layout/content_main.xml
@@ -4,63 +4,101 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
+    android:background="@drawable/background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.fingertip.seekaround.MainActivity"
     tools:showIn="@layout/activity_main">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#66000000" />
+
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/mainLayout"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_above="@+id/bottomLayout"
+        android:layout_centerHorizontal="true"
+        android:elevation="4dp"
+        android:gravity="center"
         android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:src="@drawable/login_image" />
-
-
         <EditText
+            android:id="@+id/etUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="-15dp"
             android:background="@drawable/et_login_background"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="@string/username_hint"
+            android:drawableLeft="@drawable/ic_user"
+            android:drawablePadding="10dp"
+            android:hint="Username"
+            android:padding="8dp"
             android:textColor="@color/textColor"
-            android:textSize="16sp" />
-
+            android:textColorHint="@color/textColorLight"
+            android:textSize="15sp" />
 
         <EditText
+            android:id="@+id/etPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="10dp"
             android:background="@drawable/et_login_background"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="@string/password_hint"
+            android:drawableLeft="@drawable/ic_password"
+            android:drawablePadding="10dp"
+            android:hint="Password"
+            android:padding="8dp"
             android:textColor="@color/textColor"
-            android:textSize="16sp" />
+            android:textColorHint="@color/textColorLight"
+            android:textSize="15sp" />
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="45dp"
             android:background="@drawable/btn_login"
-            android:text="Login"
+            android:fontFamily="sans-serif-thin"
+            android:gravity="center"
+            android:text="Sign In"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/bottomLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/mainLayout"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/mainLayout"
+        android:orientation="horizontal"
+        android:paddingBottom="25dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="15dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-thin"
+            android:text="Create Account"
+            android:textColor="@color/textColor"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-thin"
+            android:text="Forgot password?"
+            android:textColor="@color/textColor"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
