--- a/SeekAround/app/src/main/res/layout/content_main.xml
+++ b/SeekAround/app/src/main/res/layout/content_main.xml
@@ -39,6 +39,20 @@
             android:textSize="15sp" />
 
         <EditText
+            android:id="@+id/etEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/et_login_background"
+            android:drawableLeft="@drawable/ic_email"
+            android:drawablePadding="10dp"
+            android:hint="Username"
+            android:padding="8dp"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/textColorLight"
+            android:textSize="15sp" />
+
+
+        <EditText
             android:id="@+id/etPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -86,10 +100,19 @@
             android:textColor="@color/textColor"
             android:textStyle="bold" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+        <!--<View-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight="1" />-->
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Sign In"
+            android:textColor="@color/textColor"
+            android:visibility="invisible" />
 
 
         <TextView
