--- a/SeekAround/app/src/main/res/layout/content_main.xml
+++ b/SeekAround/app/src/main/res/layout/content_main.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/bottomLayout"
         android:layout_centerHorizontal="true"
+        android:animateLayoutChanges="true"
         android:elevation="4dp"
         android:gravity="center"
         android:orientation="vertical">
@@ -45,12 +46,25 @@
             android:background="@drawable/et_login_background"
             android:drawableLeft="@drawable/ic_email"
             android:drawablePadding="10dp"
-            android:hint="Username"
+            android:hint="Email"
             android:padding="8dp"
             android:textColor="@color/textColor"
             android:textColorHint="@color/textColorLight"
+            android:textSize="15sp"
+            android:visibility="gone" />
+        <EditText
+            android:id="@+id/etPhoneno"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/et_login_background"
+            android:drawableLeft="@drawable/ic_phone"
+            android:drawablePadding="10dp"
+            android:hint="Password"
+            android:padding="8dp"
+            android:visibility="gone"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/textColorLight"
             android:textSize="15sp" />
-
 
         <EditText
             android:id="@+id/etPassword"
@@ -65,7 +79,10 @@
             android:textColorHint="@color/textColorLight"
             android:textSize="15sp" />
 
+
+
         <Button
+            android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:background="@drawable/btn_login"
@@ -86,6 +103,7 @@
         android:layout_alignEnd="@+id/mainLayout"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/mainLayout"
+        android:animateLayoutChanges="true"
         android:orientation="horizontal"
         android:paddingBottom="25dp"
         android:paddingLeft="5dp"
@@ -93,6 +111,7 @@
         android:paddingTop="15dp">
 
         <TextView
+            android:id="@+id/tvCreateAccount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-thin"
@@ -106,16 +125,17 @@
         <!--android:layout_weight="1" />-->
 
         <TextView
+            android:id="@+id/tvSignIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Sign In"
             android:textColor="@color/textColor"
             android:visibility="invisible" />
 
 
         <TextView
+            android:id="@+id/tvForgotPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-thin"
