--- a/SeekAround/app/src/main/res/layout/content_main.xml
+++ b/SeekAround/app/src/main/res/layout/content_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.fingertip.seekaround.MainActivity"
+    tools:context="com.fingertip.seekaround.activities.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <View
