--- a/SeekAround/app/src/main/res/layout/content_splash.xml
+++ b/SeekAround/app/src/main/res/layout/content_splash.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".SplashActivity"
+    tools:context=".activities.SplashActivity"
     tools:showIn="@layout/activity_splash">
     <View
         android:layout_width="match_parent"
